force-app/force-app/force-app/main/default/objects/OrderItem/fields/CBM__c.field-meta.xml
<CustomField>
    <fullName>CBM__c</fullName>
    <formula>Product2.CBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>