force-app/force-app/force-app/main/default/objects/OrderItem/fields/Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount__c</fullName>
    <label>Flat Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>