force-app/force-app/force-app/main/default/objects/OrderItem/fields/Order_Product_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>