force-app/force-app/force-app/main/default/objects/OrderItem/fields/Order_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Order_Subtotal__c</fullName>
    <formula>Quantity * PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>