force-app/force-app/force-app/main/default/objects/OrderItem/fields/Orderproduct_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Orderproduct_Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>