force-app/force-app/force-app/main/default/objects/OrderItem/fields/PPD__c.field-meta.xml
<CustomField>
    <fullName>PPD__c</fullName>
    <label>PPD Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>