force-app/force-app/force-app/main/default/objects/OrderItem/fields/Sales_Price_after_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_after_Discount__c</fullName>
    <label>Sales Price after Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>