force-app/force-app/force-app/main/default/objects/OrderItem/fields/Sales_Price_after_Discount_Temp__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_after_Discount_Temp__c</fullName>
    <formula>UnitPrice - (UnitPrice * ( Discount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Price after Discount Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>