force-app/force-app/force-app/main/default/objects/OrderItem/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>