force-app/force-app/force-app/main/default/objects/OrderItem/fields/Taxable_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Value__c</fullName>
    <formula>Quantity *  Basic_Unit_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>