force-app/force-app/force-app/main/default/objects/OrderItem/fields/Total_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_CBM__c</fullName>
    <formula>Quantity *  Product2.CBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>