force-app/force-app/force-app/main/default/objects/OrderItem/fields/Total_Price_WithOut_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_WithOut_Discount__c</fullName>
    <formula>Quantity * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>