force-app/force-app/force-app/main/default/objects/OrderItem/fields/Total_Temp__c.field-meta.xml
<CustomField>
    <fullName>Total_Temp__c</fullName>
    <formula>(UnitPrice - (ROUND(UnitPrice * Discount__c, 2))) * (1 - ( PPD__c + VD__c + SPL_DISCOUNT__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>