force-app/force-app/force-app/main/default/objects/OrderItem/fields/Total_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price__c</fullName>
    <formula>Quantity *  UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>