force-app/force-app/force-app/main/default/objects/OrderItem/fields/VD__c.field-meta.xml
<CustomField>
    <fullName>VD__c</fullName>
    <label>VD Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>